# aeonPabloProd

./: .gitignore  README.md  deploy_modal.sh  environment.yml  modal_app.py  pyproject.toml
playground/: index.html  server.py
src/: checkpoint_bootstrap.py  checkpoint_source.py
src/segmentation/: convert_data.py  evaluate.py  infer.py  predict.py  train.py
src/survival/: check_assumptions2.py  check_ph_assumption.py  evaluate.py  features.py  ph_correction_experiment.py  predict.py  train_aft.py  train_cox.py
