[project]
name = "aeon-autoresearch"
version = "0.1.0"
description = "Automated brain tumor segmentation from FLAIR MRI"
requires-python = ">=3.11"

[project.dependencies]
torch = ">=2.0"
torchvision = ">=0.15"
monai = ">=1.3"
nibabel = ">=5.0"
SimpleITK = ">=2.3"
numpy = ">=1.24"
scipy = ">=1.11"
pandas = ">=2.0"
matplotlib = ">=3.7"
seaborn = ">=0.12"
scikit-learn = ">=1.3"
scikit-image = ">=0.21"
tqdm = ">=4.65"
tensorboard = ">=2.14"
einops = ">=0.7"
pyyaml = ">=6.0"
gdown = ">=5.2"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
